# homestation-api

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
scripts/: simulate.py
source/: app.py
