[tool.poetry]
name = "homestation-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
Markdown = "^3.3.4"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
